--- a/krimis/child.html
+++ b/krimis/child.html
@@ -58,8 +58,8 @@ Militärpolizisten <a href="https://de.wikipedia.org/wiki/Jack_Reacher_(Romanfig
   <li>2015: <em>Make Me</em> (dt. Keine Kompromisse)</li>
   <li>2016: <em>Night School</em>  (dt. Der Ermittler)</li>
   <li>2017: <em>The Midnight Line</em> (dt. Der Bluthund)</li>
-  <li>2018: <em>Past Tense</em></li>
-  <li>2019: <em>Blue Moon</em></li>
+  <li>2018: <em>Past Tense</em> (dt. Der Spezialist)</li>
+  <li>2019: <em>Blue Moon</em> (dt. Die Hyänen)</li>
   <li>2020: <em>Sentinel</em></li>
   <li>2021: <em>Better Off Dead</em></li>
 </ul>
