--- a/krimis/pavone.html
+++ b/krimis/pavone.html
@@ -36,9 +36,9 @@ ist ein amerikanischer Autor: <a href="http://www.chrispavone.com" target="_blan
 
 <ul>
   <li>2012: <em>The Expats</em></li>
-  <li>2014: The Accident</li>
-  <li>2016: The Travelers</li>
-  <li>2019: The Paris Diversion</li>
+  <li>2014: <em>The Accident</em></li>
+  <li>2016: <em>The Travelers</em></li>
+  <li>2019: <em>The Paris Diversion</em></li>
   <li>2022: Two Nights in Lisbon</li>
 </ul>
 
