--- a/studer/studerB.html
+++ b/studer/studerB.html
@@ -161,12 +161,18 @@ Heft 3.</li>
   Kai-shek</a> zeitweise unter Hausarrest gestellt.</li>
   <li><span id="bloch"></span><a href="https://de.wikipedia.org/wiki/Ernst_Bloch" target="_blank"><strong>Bloch, Ernst</strong></a>
   (1885–1977) 212, 391, 427 <br />	
-  Bewohner der
-  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie am Laubenheimer Platz</a>, befreundet mit <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> und m4slink(`N’,
-  neumann, Heinz Neumann).</li>
+  Deutscher Philosoph; Bewohner der
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie am Laubenheimer Platz</a> (212) –  verließ Deutschland
+  1933 (391) – befreundet mit <a href="studerB#buber-neumann">→Margarete
+  Buber-Neumann</a> und 
+  <a href="studerN#neumann">→Heinz Neumann</a> (427).</li>
   <li><span id="blochk"></span><a href="https://de.wikipedia.org/wiki/Karola_Bloch" target="_blank"><strong>Bloch, Karola</strong></a>
   (geb. Piorkowski) (1905–1994) 212, 213, 391, 427 <br />
-  Polnische-deutsche Architektin, Frau von <a href="studerB#Bloch">→Ernst Bloch</a>.</li>
+  Polnische-deutsche Architektin; Frau von <a href="studerB#Bloch">→Ernst
+  Bloch</a>, lebte in der
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie am Laubenheimer Platz</a> (212f) – verließ Deutschland 1933 (391)
+  – befreundet mit <a href="studerB#buber-neumann">→Margarete
+  Buber-Neumann</a> und <a href="studerN#neumann">→Heinz Neumann</a> (427).</li>
   <li><a href="https://de.wikipedia.org/wiki/Rosa_Bloch" target="_blank"><strong>Bloch, Rosa</strong></a>
   (1880–1922) 9, 132 <br />	
   Schweizer Kommunistin; wandte sich gegen die Annäherung der Komintern an
@@ -269,9 +275,11 @@ Heft 3.</li>
   (1874–1945) 64, 159, 193, 213, 215, 231, 394, 539 <br />
   Schweizer Arzt und libertärer Sozialist; Freund und Mentor von
   <a href="studerM#münzenberg">→Willi Münzenberg</a> (64, 215, 394, 539) –  <em>enfant terrible</em> der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> (193) – 1933 aus der KPS ausgeschlossen (159).</li>
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> (193) – 1933 aus der KPS ausgeschlossen (159, 215).</li>
   <li><span id="brupacherp"></span><a href="https://de.wikipedia.org/wiki/Paulette_Brupbacher" target="_blank"><strong>Brupbacher-Raygrodski, Paulette</strong></a>	(1880–1967) 159, 193, 215, 539 <br />
-  Schweizer Ärztin und Sozialreformerin; Frau von <a href="studerB#brupbacher">→Fritz Brupbacher</a> (159) – 
+  Schweizer Ärztin und Sozialreformerin; Frau von <a href="studerB#brupbacher">→Fritz Brupbacher</a>, Mitglied des Zentralkomitees der 
+  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">IAH</a> und 
+  Mitarbeiterin der Zeitschrift <a href="https://de.wikipedia.org/wiki/Der_Weg_der_Frau" target="_blank"><em>Weg der Frau</em></a> (159) – 
   Freundin von <a href="studerG#gross">→Babette Gross</a> (215, 539).</li>
   <li><strong>Brutzkus, Berta</strong> (1887–1965) 144, 150 	<br />
   Jüdische Ärztin aus Memel; erste Ehefrau von <a href="studerR#reich">→
