--- a/studer/studerF.html
+++ b/studer/studerF.html
@@ -66,7 +66,9 @@
   Österreichische Kommunistin; Gründerin der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Österreichs" target="_blank">KPÖ</a> (146)
   –  Schwester von <a href="studerE#eislerh">→Hanns
-  Eisler</a> und <a href="studerE#eislerg">→Gerhart Eisler</a> (201) –  floh 1933
+  Eisler</a> und <a href="studerE#eislerg">→Gerhart Eisler</a> (201) –
+  Autorin einer Broschüre zur kommunistischen Sexualethik (216) – floh
+  1933
   zusammen mit <a href="studerM#maslow">→Arkadi Maslow</a> nach Paris.</li>
   <li><a href="https://de.wikipedia.org/wiki/Harry_Fisher_(Gewerkschafter)" target="_blank"><strong>Fisher, Harry</strong></a>
   (1911–2003) 482 <br />
