--- a/studer/studerG.html
+++ b/studer/studerG.html
@@ -51,14 +51,14 @@
   Freundin von <a href="studerK#kramer">→Hilde Kramer</a>, mit ihr und
   <a href="studerO#oesterreich">→Ruth Oesterreich</a> 1929 aus der 
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> ausgeschlossen (159) –  Geliebte von <a href="studerV#vassart">→Albert
-  Vassart</a>; Mitarbeiterin des Weltfrauenkomitees gegen Krieg und
-  Faschismus.</li>
+  Vassart</a> (217) –  Mitarbeiterin des Weltfrauenkomitees gegen Krieg und
+  Faschismus (401).</li>
   <li><span id="geissler"></span><strong>Geissler, Luise</strong> (1899–1973) 
   209, 210, 214, 301, 308, 309, 311, 313, 327, 333, 334, 530, 534 <br />	
   Deutsche Kommunistin; Mitglied des Aktionsausschusses der Münchner
   Räterepublik (209) –  tätig für die KPen in der Schweiz, Österreich (210) –  ab 1921
   tätig im Moskauer <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>-Apparat auch mit geheimen Aufträgen in
-  Deutschland und den USA (210) – lebte in Moskau kurz mit (<a href="studerL#levien">→Max Levien</a> zusammen (210) – Gefährtin von 
+  Deutschland und den USA (210) – lebte in Moskau kurz mit <a href="studerL#levien">→Max Levien</a> zusammen (210) – Gefährtin von 
   <a href="studerR#roy">→Roy</a> 1927
   in China (209).</li>
   <li><a href="https://de.wikipedia.org/wiki/Martha_Gellhorn" target="_blank"><strong>Gellhorn, Martha</strong></a>
@@ -149,7 +149,7 @@
   227, 267, 270, 280, 284, 391, 393, 395, 399, 405, 406, 413, 416, 417,
   420, 438, 454, 539, 549 <br />
   Deutsche Kommunistin, später Publizistin; Lebensgefährtin von <a href="studerM#münzenberg">→Willi Münzenberg</a> (139) – 
-  Schwester von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a>;
+  Schwester von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> (214) –
   Geschäftsführerin des Neuen Deutschen Verlags. 1933 Flucht nach Paris,
   Verlagsleitung der
   <a href="https://de.wikipedia.org/wiki/Editions_du_Carrefour" target="_blank">Éditions du Carrefour</a>. Gross trat 1937 aus der KPD aus. Ihr gelang
