--- a/studer/studerH.html
+++ b/studer/studerH.html
@@ -95,19 +95,19 @@
   Schwede, verheiratet mit <a href="studerS#stenbock">→Charlotte Stenbock-Fermor</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Magnus_Hirschfeld" target="_blank"><strong>Hirschfeld, Magnus</strong></a>
   (1868–1935) 214, 215, 393 <br />
-  Deutscher Sexualwissenschaftler, in dessen Haus <a href="studerM#mümzenberg">→Willi Münzenberg</a>, 
+  Deutscher Sexualwissenschaftler; in dessen Haus <a href="studerM#mümzenberg">→Willi Münzenberg</a>, 
   <a href="studerG#gross">→Babette Gross</a>, 
   <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> und
-  <a href="studerN#neumann">→Heinz Neumann</a> eine Zeitlang wohnten;
-  Hirschfelds Institut für Sexualwissenscahft wurde 1933 von
-  faschistischen Studenten zerstört.</li>
+  <a href="studerN#neumann">→Heinz Neumann</a> eine Zeitlang wohnten (214f) – 
+  Hirschfelds Institut für Sexualwissenschaft wurde 1933 von
+  faschistischen Studenten zerstört (393).</li>
   <li><strong>Hitz, Christian</strong> (1883–1954) 246 <br />
   Schweizer kommunistischer Rechtsanwalt, befreundet mit <a href="studerR#roy">→Roy</a>, siehe auch
   <a href="https://hls-dhs-dss.ch/de/articles/006377/2006-05-11/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><strong>Hô Chi Minh</strong>	<a href="studerN#nguyen">→Nguyễn Ái Quốc</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Max_Hodann" target="_blank"><strong>Hodann, Max</strong></a>
   (1894–1946) 215 <br />
-  Deutscher Arzt und Sexualpädagoge, stand in Kontakt zu <a href="studerB#brupbacher">→Brupbacher</a> und seiner Frau.</li>
+  Deutscher Arzt und Sexualpädagoge; stand in Kontakt zu <a href="studerB#brupbacher">→Brupbacher</a> und seiner Frau (215).</li>
   <li><a href="https://de.wikipedia.org/wiki/Edwin_Hoernle" target="_blank"><strong>Hoernle, Edwin</strong></a>
   (1883–1952) 234 <br />
   Deutscher Kommunist, unterrrichtete an der
