--- a/studer/studerIJ.html
+++ b/studer/studerIJ.html
@@ -51,7 +51,9 @@
   Film <em>Spanische Erde</em>, dessen Kommentar <a href="studerH#hemingway">→Hemingway</a> geschrieben und gesprochen hat.</li>
   <li><a href="https://en.wikipedia.org/wiki/Ljubica_Ivošević_Dimitrov" target="_blank"><strong>Ivošević, Ljubica</strong></a>
   (1884–1933) 211 <br />
-  Serbische Kommunistin, <a href="studerD#dimitrov">→Dimitrovs</a> erste Frau.</li>
+  Serbische Kommunistin; <a href="studerD#dimitrov">→Dimitrovs</a> erste
+  Frau, 1928 in einer psychiatrischen Anstalt in Moskau interniert,
+  Selbstmord im Mai 1933 (211).</li>
 </ul>
 
 <h2 id="j">J</h2>
