--- a/studer/studerK.html
+++ b/studer/studerK.html
@@ -55,9 +55,9 @@
   denunziert; siehe auch
   <a href="https://maitron.fr/spip.php?article88788" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><span id="kantorowicz"></span><a href="https://de.wikipedia.org/wiki/Alfred_Kantorowicz" target="_blank"><strong>Kantorowicz, Alfred</strong></a> (1899–1979) 212, 213, 391, 399, 404 <br />
-  Deutscher Schriftsteller, der mit <a href="studerWX#wolf-ferarri">→Frieda
+  Deutscher Schriftsteller; lebte mit <a href="studerWX#wolf-ferarri">→Frieda
   Wolf-Ferrari</a> in der
-  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Wilmersdorfer Künstlerkolonie</a> lebte; ab 1930 Mitglied der KPD;
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Wilmersdorfer Künstlerkolonie</a> (212f) – ab 1930 Mitglied der KPD;
   musste 1933 Deutschland verlassen.</li>
   <li><strong>Kantorowicz, Friedel</strong> <a href="studerWX#wolf-ferrari">→Wolf-Ferrari, Frieda</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Roman_Lasarewitsch_Karmen" target="_blank"><strong>Karmen, Roman</strong></a>
@@ -202,7 +202,7 @@
   untersuchte das Finanzgebaren von <a href="studerR#reich ">→Jakov Reich</a> als
   Leiter des Westeuropäischen Sekretariats (156).</li>
   <li><strong>Krueger, Ani</strong> 211 <br />
-  Geliebte von <a href="studerD#dimitrov">→Dimitrov</a>.</li>
+  Geliebte von <a href="studerD#dimitrov">→Dimitrov</a> (211).</li>
   <li><span id="krumbein"></span><strong>Krumbein, Charles</strong> (1897–1947) »Stewart«, »Kennedy« 348 <br />
   Amerikanischer Kommunist, für die
   <a href="https://de.wikipedia.org/wiki/Rote_Gewerkschafts-Internationale" target="_blank">Profintern</a> in China tätig.</li>
@@ -244,7 +244,7 @@
   430, 432, 437, 440, 445–451, 543, 550 <br />
   Deutscher Kommunist; Partner von <a href="studerS#stenbock">→Charlotte
   Stenbock-Fermor</a> (30), Mitarbeiter von <a href="studerA#alpari">→Alpári</a>
-  bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (184f) – 1931 zu einem Jahr Haft verurteilt (197) – ab 1933 in der Schweiz tätig und entwickelte
+  bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (184f) – 1931 zu einem Jahr Haft verurteilt (197) – Fragebogen aus seiner Moskauer Personalakte (218) – ab 1933 in der Schweiz tätig und entwickelte
   dort eine enge Freundschaft zu <a href="studerN#neumann">→Heinz
   Neumann</a>; emigrierte in die Sowjetunion, wo er in der
   Informationsabteilung des EKKI arbeitete; denunzierte, selbst
