--- a/studer/studerL.html
+++ b/studer/studerL.html
@@ -73,9 +73,9 @@
   Spanische Schriftstellerin, Teilnehmerin am »Zweiten Internationale
   Schriftstellerkongresses zur Verteidigung der Kultur«.</li>
   <li><a href="https://de.wikipedia.org/wiki/Susanne_Leonhard" target="_blank"><strong>Leonhard, Susanne</strong></a> (1895–1984) 212, 391 <br />
-  Deutsche Schriftstellerin, Gründungsmitglied der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>, wohnte in der
+  Deutsche Journalistin; Gründungsmitglied der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>, wohnte in der
   <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Wilmersdorfer Künstlerkolonie</a>, von wo aus sie sich bis 1935 im
-  kommunistischen Widerstand betätigte; emigrierte 1935 in die Sowjetunion.</li>
+  kommunistischen Widerstand betätigte (212) – emigrierte 1935 in die Sowjetunion (391).</li>
   <li><a href="https://de.wikipedia.org/wiki/Wolfgang_Leonhard" target="_blank"><strong>Leonhard, Wolfgang</strong></a>
   (1921–2014) 212, 391<br />
   Deutscher Historiker und Publizist, Sohn von Susanne Leonhard.</li>
