--- a/studer/studerR.html
+++ b/studer/studerR.html
@@ -97,7 +97,7 @@
   <li><span id="regler"></span><a href="https://de.wikipedia.org/wiki/Gustav_Regler" target="_blank"><strong>Regler, Gustav</strong></a> (1898-1963) 198, 212, 213, 391, 396, 404–406, 455, 465<br />
   Deutscher kommunstischer Schriftsteller; 1929 in die <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>
   eingetreten, Mitwohner der
-  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie</a> am Laubenheimer Platz (198) –  1933 Flucht nach Paris,
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie</a> am Laubenheimer Platz (198, 212) –  1933 Flucht nach Paris,
   Mitarbeit beim
   <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank">Braunbuch über Reichtagsbrand und Hitlerterror</a>. In Spanien als
   Mitglied der
