--- a/studer/studerV.html
+++ b/studer/studerV.html
@@ -56,7 +56,7 @@
   Früherer Ehemann von <a href="studerD#duti">→Hilda Duti</a> und wie sie 1937 in
   Moskau verhaftet (451).</li>
   <li><span id="vassart"></span><a href="https://fr.wikipedia.org/wiki/Albert_Vassart" target="_blank"><strong>Vassart, Albert</strong></a> (1898–1958) 217 <br />
-  Französischer Kommunist, Mann von <a href="studerG#geisenberg">→Cilly
+  Französischer Kommunist; Geliebter von <a href="studerG#geisenberg">→Cilly
   Geisenberg</a>, wie sie in Opposition zur Parteilinie nach dem VI.
   Weltkongress 1928 (217).</li>
   <li><a href="https://fr.wikipedia.org/wiki/Jeannette_Vermeersch" target="_blank"><strong>Vermeersch,
