--- a/studer/studerS.html
+++ b/studer/studerS.html
@@ -310,7 +310,7 @@ Schriftstellerkongresses zur Verteidigung der Kultur, siehe
   Deutsche Kommunistin; Gefährtin von <a href="studerK#kurella">→Heinrich
   Kurella</a> (30) – Mitarbeiterin bei <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186), ab 1933 in der
   Schweiz (422ff), dort verhaftet (430) – lebte in der
-  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie beim Laubenheimer Platz</a> (212) – Abbildung (219,
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank">Künstlerkolonie beim Laubenheimer Platz</a> (212) – Foto (219,
   450) – war mit dem lettischen Grafen <a href="studerS#stenbocka ">→Alexander
   Graf Stenbock-Fermor</a> verheiratet als sie Kurella kennenlernt (219) –
   Mitglied der
